--- a/WebContent/todo.html
+++ b/WebContent/todo.html
@@ -5,15 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/todo.css">
 </head>
 
 <body>
-    <div id="tasks">
-        <h2>Todo List</h2>
-        <ul id="taskList"></ul>
-        <input type="text" id="taskInput" placeholder="Add a new task">
-        <button onclick="addTask()">Add Task</button>
+    <div id="tasks" class="">
+        <h1>Todo List</h1>
+        <div class="container add-task text-center">
+            <div class="row">
+                <div class="col">
+                    <input type="text" id="taskInput" class="form-control" placeholder="Add new task"
+                        aria-label="addTask">
+                </div>
+                <div class="col">
+                    <button type="button" onclick="addTask()" class="btn btn-primary">Add Task</button>
+                </div>
+                <div class="col">
+                    <button type="button" onclick="deleteCompletedTasks()" class="btn btn-danger">Delete
+                        Completed</button>
+
+                </div>
+            </div>
+        </div>
+        <ul id="taskList">
+            <li>tyty</li>
+        </ul>
+
+
+
     </div>
 
     <script src="todo.js"></script>
