--- a/WebContent/todo.html
+++ b/WebContent/todo.html
@@ -20,11 +20,12 @@
                         aria-label="addTask">
                 </div>
                 <div class="col">
-                    <button type="button" onclick="addTask()" class="btn btn-primary">Add Task</button>
+                    <button onclick="addTask()" class="add-task-button">
+                        <img src="./public/plus.png">
+                    </button>
                 </div>
                 <div class="col">
-                    <button type="button" onclick="deleteCompletedTasks()" class="btn btn-danger">Delete
-                        Completed</button>
+
 
                 </div>
             </div>
@@ -32,6 +33,8 @@
         <ul id="taskList">
             <li>tyty</li>
         </ul>
+        <button type="button" onclick="deleteCompletedTasks()" class="btn btn-danger">Delete
+            Completed</button>
 
 
 
