added date column

--- a/WebContent/todo.html
+++ b/WebContent/todo.html
@@ -20,6 +20,9 @@
                         aria-label="addTask">
                 </div>
                 <div class="col">
+                    <input type="date" id="dueDateInput">
+                </div>
+                <div class="col">
                     <button onclick="addTask()" class="add-task-button">
                         <img src="./public/plus.png">
                     </button>
