--- a/WebContent/todo.html
+++ b/WebContent/todo.html
@@ -16,19 +16,18 @@
         <div class="container add-task text-center">
             <div class="row">
                 <div class="col">
-                    <input type="text" id="taskInput" class="form-control" placeholder="Add new task"
-                        aria-label="addTask">
+                    <div class="input-group mb3">
+                        <input type="text" id="taskInput" class="form-control" placeholder="Add new task"
+                            aria-label="addTask">
+                        <input type="date" id="dueDateInput">
+
+                    </div>
                 </div>
-                <div class="col">
-                    <input type="date" id="dueDateInput">
-                </div>
-                <div class="col">
+                <div class="col add-sort">
                     <button onclick="addTask()" class="add-task-button">
                         <img src="./public/plus.png">
                     </button>
-                </div>
-                <div class="col">
-
+                    <button onclick="loadTasks()" type="button" class="btn btn-primary sort-btn">Sort Tasks</button>
 
                 </div>
             </div>
