added home route

--- a/WebContent/todo.html
+++ b/WebContent/todo.html
@@ -13,7 +13,7 @@
 <body>
     <div id="tasks" class="">
         <h1>Todo List</h1>
-        <div class="container add-task text-center">
+        <div class="container add-task">
             <div class="row">
                 <div class="col">
                     <div class="input-group mb3">
